k8s-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecofusion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecofusion
  template:
    metadata:
      labels:
        app: ecofusion
    spec:
      serviceAccountName: ecofusion-service-account-name
      containers:
      - name: ecofusion
        image: gcr.io/sample-product-catalog/ecofusion:COMMIT_SHA
        ports:
        - containerPort: 80
