service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecofusion-service
  namespace: ecofusion
spec:
  selector:
    app: ecofusion-deployment
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
