services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecofusion-service
  namespace: ecofusion-namespace
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: ecofusion
